--- a/assets/webview.html
+++ b/assets/webview.html
@@ -9,10 +9,14 @@
 <body>
     <h1>AI Coding Assistant</h1>
     <p>Click the button to get feedback on your open file.</p>
+
     <button onclick="sendRequest()">Get Feedback</button>
+
     <div class="info">
         <strong>Currently Targeting:</strong> <span id="filename">None</span>
     </div>
+
+    <!-- This div is empty at first and gets populated dynamically -->
     <div id="response" class="info"></div>
 
     <script src="{{scriptUri}}"></script>
